# swap-rate-trade

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  nb1_sampling_frequency.py  nb2_eda.py  nb3_mean_reversion.py  pyproject.toml  requirements.txt
archive/template_reference/: README_original.md  nb0_data_audit.py  nb1_sampling_frequency.py  nb2_eda.py  nb4_impact_analysis.py  nb5_simulation.py
bquant_snippets/: 00_data_audit.py  02_excel_research_starter.py
docs/: BQUANT_COMPAT.md  BQUANT_PASTE_PROTOCOL.md  DATA_CONTRACT.md  DGP_CATALOG.md  EXCEL_RESEARCH_PROTOCOL.md  IMPLEMENTATION_STATUS.md  NEXT_SESSION_CHECKLIST.md  OPERATOR_READOUTS.md  PARAMETER_SOURCES.md  PUBLIC_REPO_SAFETY.md  PYTHON_ECONOMETRICS.md
notebooks/: 00_dgp_design.ipynb  00_granularity_selection.ipynb  01_granularity_selection.ipynb
research_snippets/: 00_data_audit.py  01_granularity_pathb.py  02_excel_research_starter.py  03_mean_reversion_starter.py
synthetic/dont_want/: ou_no_noise.py  random_walk_with_noise.py
synthetic/want/: ou_with_noise.py
tests/: test_dont_want_ou_no_noise.py  test_dont_want_random_walk_with_noise.py  test_want_ou_with_noise.py
