[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swap-rate-trade"
version = "0.0.1"
description = "Research scaffold for statistical-arbitrage trading on long-tenor swap rates."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["synthetic*"]
exclude = ["archive*", "tests*", "notebooks*", "docs*"]
